[package]
name = "asdfw"
version = "0.1.0-m3-wip"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
dirs = "4.0"
clap = { version = "3.0", features = ["wrap_help", "env", "derive"] }
flexi_logger = "0.22"
log = "0.4"
textwrap = "0.14"
yansi = "0.5"
clap_complete = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
stripmargin = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"] }

[dev-dependencies]
assert_fs = "1.0"
rstest = "0.12"
temp-env = "0.2"